corrected alignment and updated image

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 
             <tr onmouseout="equi_stop()" onmouseover="equi_start()">
-              <td style="padding:20px;width:25%;vertical-align:middle">
+              <td style="padding:20px;width:25%;vertical-align:top">
                 <div class="one">
                   <div class="two" id="llie2_image">
-                    <img src="images/llie2_after.png" style="width:100%; max-width:150px;"> <!-- Set the max-width -->
+                    <img src="images/llie2_updated.png" style="width:100%; max-width:150px;"> <!-- Set the max-width -->
                   </div>
-                  <img src="images/llie2_before.png" style="width:100%; max-width:150px;"> <!-- Set the max-width -->
+                  <img src="images/llie2_updated.png" style="width:100%; max-width:150px;"> <!-- Set the max-width -->
                 </div>
                 <script type="text/javascript">
                   function equi_start() {
@@ -73,7 +73,7 @@
                   ccc_stop();
                 </script>
               </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
+              <td style="padding:20px;width:75%;vertical-align:top">
                 <a href="https://arxiv.org/abs/2206.01334">
                   <span class="papertitle">Long Scale Error Control in Low Light Image and Video Enhancement Using Equivariance</span>
                 </a>
@@ -81,17 +81,22 @@
                 <strong>Sara Aghajanzadeh</strong>,
                 <a href="http://luthuli.cs.uiuc.edu/~daf/">David Forsyth</a>
                 <br>
-                <em>Arxiv</em>, 2022
+                <em>Arxiv</em>, June 2022
                 <br>
-                <p>A network should not change prediction if the input image is shifted (i.e., translation)
+                <!-- <p>A network should not change prediction if the input image is shifted (i.e., translation)
                   or other transformations. To address this, we use an averaging procedure to impose a weaker, equivariance-like property. 
                   Our novel contribution involves using the enhancement model to estimate at both short and long scales, while a trained scale selection model predicts a scale map that guides the final reconstruction. Our ensemble method similarly uses long scales for denoising dark regions (i.e., large neighborhood for darker (less certain) pixels) and short scales for restoring details in bright regions (i.e., smaller neighborhood for lighter (more certain) pixels).
-                  This approach mirrors the attention mechanism in transformer models, using bright regions for context and dark regions for noise removal (Retinexformer is an example).</p>
+                  This approach mirrors the attention mechanism in transformer models, using bright regions for context and dark regions for noise removal (Retinexformer is an example).</p> -->
               </td>
             </tr>
 
+            <!-- Add spacing between rows -->
+            <tr>
+              <td colspan="2" style="padding: 10px 0;"></td>
+            </tr>
+            
             <tr onmouseout="llie_stop()" onmouseover="llie_start()">
-              <td style="padding:20px;width:25%;vertical-align:middle">
+              <td style="padding:20px;width:25%;vertical-align:top">
                 <div class="one">
                   <div class="two" id="llie1_image">
                     <img src="images/llie1_after.jpg" style="width:100%; max-width:150px;"> <!-- Set the max-width -->
@@ -109,7 +114,7 @@
                   ccc_stop();
                 </script>
               </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
+              <td style="padding:20px;width:75%;vertical-align:top">
                 <a href="https://arxiv.org/abs/2205.08615#">
                   <span class="papertitle">Towards Robust Low Light Image Enhancement</span>
                 </a>
@@ -117,9 +122,9 @@
                 <strong>Sara Aghajanzadeh</strong>,
                 <a href="http://luthuli.cs.uiuc.edu/~daf/">David Forsyth</a>
                 <br>
-                <em>Arxiv</em>, 2022
+                <em>Arxiv</em>, May 2022
                 <br>
-                <p></p>
+                <!-- <p></p> -->
               </td>
             </tr>
             
