added working with Viktor

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Sara Aghajanzadeh
                 </p>
-                <p>I'm a PhD student in Computer Science at <a href="https://siebelschool.illinois.edu">UIUC</a> advised by <a href="http://luthuli.cs.uiuc.edu/~daf/">David Forsyth</a>.
+                <p>I'm a PhD student in Computer Science at <a href="https://siebelschool.illinois.edu">UIUC</a> advised by <a href="http://luthuli.cs.uiuc.edu/~daf/">Dr. David Forsyth</a>. I also closely collaborate with <a href="http://biosensors.web.engr.illinois.edu">Dr. Viktor Gruev</a>.
                 </p>
                 <p>
                   Previously, I graduated with B.S. in Computer Information Technology and M.S. in Electrical and Computer Engineering from <a href="https://www.purdue.edu">Purdue University</a>, where I was advised by <a href="https://yhlu.net">Yung-Hsiang Lu</a>. 
